+++ version 1.0-beta1
* gadu: #2750 fixed: unable to login when password contains non-ascii characters (Vogel)
* status: #2655 fixed: set status on new account automatically if status is per-identity or per-all (Vogel)

+++ version 1.0-alpha5
* gui: #2614 fixed: problems with displaying unread messages (Vogel)

+++ version 1.0-alpha4
* gadu: #2730 implemented: image sending is done using new version of protocol (Vogel)
* gadu: #2728 fixed: replace code for registering account/password reminding with WWW calls (Vogel)
* gadu: require libgadu 1.12.x (Vogel)
* sms: #2675 fixed: new code for T-Mobile gateway (Vogel)
* history: #2672 fixed: crash in history (Vogel)
* history: #2745 implemented: enter in query field performs search (Vogel)

+++ version 1.0-alpha3
* gadu: #2710 fixed: sending images works again (Vogel)
* message: #2717 fixed: invalid < and > handling (Vogel)
* plugin: #2706 fixed: smarter loading and unloading plugins (Vogel)

+++ version 1.0-alpha2
* gui: #2621 fixed: lots of Ungroupped tabs could appear in Group Tab Bar (Vogel)
* chat: #2696 fixed: do not open chat window when message is sent for Gadu-Gadu multilogon (Vogel)
* gui: #2678 fixed: remove new line characters from window title (Vogel)
* imagelink: #2676 fixed: improve image links recognition (Vogel)
* hints: #2677 fixed: allow wrapping text inside tool tip (Vogel)
* history: #2681 fixed: allow to maximize history windows on all Window Managers (Vogel)
* tabs: #2646 fixed: content of conversation disappears after detaching tab (Vogel)
* gadu: #2668, #2709 fixed: roster synchronization problems (Vogel)

+++ version 1.0-alpha1
* core: #2058 fixed: avoid notifications flood on connection error (Juzef, beevvy)
* gui: do not scale up avatars smaller than 32x32 on buddy list (beevvy)
* gui: square, rounded avatars on buddy list (Juzef)
* gui: #2622 fixed: ignoring buddies in buddy options window and using menu option (Juzef)
* gui: #1726 fixed: silent mode disables chat window auto-opening (Juzef)